# github-mcp

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  INTRO.md  LICENSE  README.md  pyproject.toml
src/github_mcp/: __init__.py  github_client.py  server.py
tests/: __init__.py  test_github_client.py  test_server_tools.py
