[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-mcp"
version = "0.1.0"
description = "MCP server for GitHub repositories and code search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=24.0.0",
]

[tool.black]
line-length = 100

[project.scripts]
github-mcp = "github_mcp.server:run"
