[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-mcp"
version = "0.1.0"
description = "MCP server for GitHub repositories and code search"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "James Warlick", email = "james@jameswarlick.com" }]
license = { text = "MIT" }
keywords = ["mcp", "github", "ai", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["mcp>=1.1.0", "httpx>=0.27.0", "python-dotenv>=1.0.0"]

[project.urls]
Homepage = "https://github.com/jw1/github-mcp"
Repository = "https://github.com/jw1/github-mcp"
Issues = "https://github.com/jw1/github-mcp/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.21.0", "black>=24.0.0"]

[tool.black]
line-length = 100

[project.scripts]
github-mcp = "github_mcp.server:run"
